--- a/papers/DFT/DFT.tex
+++ b/papers/DFT/DFT.tex
@@ -1,6 +1,5 @@
 \chapter{Density Functional Theory \label{sec:DFT}}
-Many of the physics in condensed matter originates from the behavior of electrons inside materials, i.e. the electronic structure.
-If we are after a quantitative description, two general ways of proceeding are possible. 
+Many of the physics in condensed matter originates from the behavior of electrons inside materials, i.e. the electronic structure, which can be studied quantitatively in two ways.
 \\\\
 The first is to formulate an analytical model whose parameters are subsequently fitted to experimental observations. 
 In this case, the Tight-Binding method is a prime example that is often used in condensed matter for its flexibility and simplicity.
@@ -12,7 +11,7 @@ These hopping parameters are termed this way because in a second quantization fo
 This ``hops'' the electron between the two.
 The limited set of model parameters can then be fitted to experimental measurements such as angle resolved photoemission spectroscopy~\cite{Damascelli2004}.
 \\\\
-The topic of this section, however, is the second way of calculating the electronic structure, i.e. from first principles, using only the ions and crystalline structure as the input. 
+The topic of this Section, however, is the second way of calculating the electronic structure, i.e. from first principles, using only the ions and crystalline structure as the input. 
 While historically there have multiple methods of achieving this (e.g. Hartree-Fock), we here focus specifically on the density-functional-theory (DFT) method.
 Ever since its theoretical inception in the sixties in the seminal works of P. Hohenberg, W. Kohn and L. J. Sham  \cite{Hohenberg1964,Kohn1965}, and especially after later numerical developments that have turned it into a highly efficient and predictive method \cite{Hamann1979,Louie1982,Vanderbilt1990,Joubert1999,Perdew1985,Perdew1986,Perdew1993}, it has been one of the prime tools in a condensed matter theorist's toolbox.
 
@@ -80,9 +79,9 @@ Using the pseudopotential approximation generally results in good results for mo
 \\\\
 While DFT offers impressive efficiency and predictive power for many materials, rationalizing the results obtained with it is often less trivial.
 This is mainly because of the large basis set that is used in the calculations, and the fact that a description in terms of extended plane-waves is often hard to grasp on an intuitive level.
-At the start of this section we commented on the simplicity and flexibility that is offered by the use of Tight-Binding models.
+At the start of this Section we commented on the simplicity and flexibility that is offered by the use of Tight-Binding models.
 There we saw that the parameters of these models can be fitted from experimental observations, which leads to an empirical method.
 
 However, one may wonder if instead of using angle resolved photoemission experiments as an input for the model, the results of a DFT calculation could be employed.
 The DFT calculation would then act as a ``numerical experiment'', and the Tight-Binding model as a way to rationalize the behavior.
-The required bridge between the two methods can be formed through Wannier functions and Wannierization, see Appendix~\ref{sec:Wannier}. 
+The required bridge connecting the two can be formed by the Wannier functions and Wannierization, discussed in Appendix~\ref{sec:Wannier}. 
