--- a/papers/FEM/FEM.tex
+++ b/papers/FEM/FEM.tex
@@ -1,5 +1,6 @@
 \chapter{Phase Field Modeling with the Finite Elements Method \label{sec:FEM}}
-In light of trying to be self-contained, we will give a short introduction to the topic based on Ref.~\cite{Biner}.
+In light of trying to be self-contained, we will give a short introduction into the methods used in simulating phase field models.
+The Finite Element Method constitutes a big part in these simulations, thus, in light of making this Thesis relatively self-contained, we give a short introduction to the topic based on Ref.~\cite{Biner}.
 \begin{figure}
 	\IncludeGraphics{fem}
 	\caption{\label{fig:BTO_fem}{\bf Finite Element Method.} a) Isoparametric local coordinate system for a triangular element. Image taken from Ref.~\cite{Biner}. b) 2D geometry spanned by triangular mesh demonstrating the flexibility of FEM meshes. Image taken from Ref.~\cite{2Dmesh}. c) Example of the geometry that is used in our simulations. d) Zoom in on the corner of the mesh shown in (c).}
