--- a/papers/GdMn2O5/GdMn2O5.tex
+++ b/papers/GdMn2O5/GdMn2O5.tex
@@ -23,7 +23,7 @@ However, this will cause an opposite torque on the magnetization of the domain, 
 If enough spin-polarized current flows through the domain, its magnetization will eventually be reoriented along the spins of the carriers. This method circumvents the need of electromagnets to create a magnetic field by using circular currents, greatly increasing the efficiency and allowing for greater domain density.
 \\\\
 It is clear that the longevity associated with magnetic order, combined with the ease and efficiency of manipulation through electrical means is highly desirable.
-This brings us to the topic of this chapter, namely the magnetoelectric effect in multiferroic insulators.
+This brings us to the topic of this Chapter, namely the magnetoelectric effect in multiferroic insulators.
 As the name implies, the magnetoelectric effect allows for the electric control of magnetic order or the magnetic control of ferroelectric polarization~\cite{Spaldin2019,Khomskii2009,Fiebig2005,Fiebig2016,Cheong2007}, the former being the most attractive from a technological point of view.
 In practice, however, the effectiveness of this cross-order control is often limited, and multiferroic materials are rare to begin with.
 The reasons why are summarized briefly below, following the discussion of Khomskii in Ref.~\cite{Khomskii2009}.
@@ -72,7 +72,7 @@ This leads to a much reduced effectiveness of external electric fields as a meth
 \\\\
 Here, we specifically focus on GdMn$_2$O$_5$ (see Fig.~\ref{fig:GdMn2O5_unit_cell})~\cite{Khomskii2009} that demonstrates an exceptional tunability of the ferroelectric polarization through an applied magnetic field~\cite{Lee13}.
 The orthorhombic $R$Mn$_2$O$_5$ manganites have a very complex crystalline structure (see Fig.~\ref{fig:GdMn2O5_unit_cell}), which leads to a wealth of different phases depending on the temperature, rare-earth ion $R$, external magnetic field and even electric-field poling history~\cite{Chapon04, Chapon06, Blake05, Radaelli09,Radaelli08, Zheng2019}.
-To keep the discussion tractable and in line with the experiments that were performed by our collaborators, we give a summary of the transitions and phases that are important for this chapter.
+To keep the discussion tractable and in line with the experiments that were performed by our collaborators, we give a summary of the transitions and phases that are important for this Chapter.
 \\\\
 All $R$Mn$_2$O$_5$ have crystallographic group P$bam$ \cite{Alonso97} in the paramagnetic phase at high temperature, which is eventually lowered to P$_ab2_1a$ when the commensurate magnetic order condenses below $T_{N} \approx 33$ K.
 This order is characterized by the propagation vector $\bm{k} = (1/2, 0, 0)$, i.e. there is a unit cell doubling along the crystalline $a$-direction.
@@ -120,7 +120,7 @@ This contribution does not suffer from the same cancellation between ionic displ
 Gd$^{3+}$ is special with respect to the other magnetic rare-earth ions in the $R$Mn$_2$O$_5$ family, because it has a very isotropic electronic configuration (4$f^7$), i.e. there is no unquenched orbital angular momentum and associated anisotropic charge distribution (as discussed profusely in the Rashba Chapter~\ref{ch:Rashba}). This means that the large spin (nominally $S=7/2$) can orient itself freely to optimize the magnetic interactions with its neighboring Mn atoms, without incurring any penalties through the atomic SOC combined with nonzero OAM.
 This leads to a high magnetic susceptibility and associated magnetoelectric effect, surpassing the other $R$Mn$_2$O$_5$ compounds both in size and tunability of $P_b$, with a measured variation of up to 5000\,$\mu$ C/m$^2$ when a magnetic field is applied~\cite{Lee13}. 
 \\\\
-Now that the stage is set, we continue with a description of the puzzling experimental observations that motivated the study in this chapter.
+Now that the stage is set, we continue with a description of the puzzling experimental observations that motivated the study in this Chapter.
 Afterwards, we continue with a description in terms of an effective spin Hamiltonian involving the Gd spins, and the AFM order parameters $\bm L$ describing the two Mn chains.
 We demonstrate that this description works remarkably well in order to reproduce the overall behavior that is observed in the experiments.
 After discussing the complex behavior that arises from the model, we comment on the generality of the observations, and conclude by summarizing the main features of the effect. 
@@ -139,7 +139,7 @@ In these plots, we have denoted the four discussed states by the labels 1-4. The
 \caption{ \label{fig:GdMn2O5_experiment2} {\bf Angle and temperature dependence of the four-state switching.} By comparing panels (a) and (b) we can see that the sign of the field angle $\phi_H$ does not matter for the four-state switching. c) Temperature dependence of the switching hysteresis at the magic angle. Above 4 K (upper panel) the more usual two-state hysteresis is observed, whereas below 4 K (lower panel) the four-state behavior starts to arise. The states, colors and arrows are indicated in the same way as in Fig.~\ref{fig:GdMn2O5_experiment1}.}
 \end{figure}
 
-The measurements we present in this section were performed in the group of A. Pimenov, on single crystal GdMn$_2$O$_5$ samples grown by S.-W. Cheong's group.
+The measurements we present in this Section were performed in the group of A. Pimenov, on single crystal GdMn$_2$O$_5$ samples grown by S.-W. Cheong's group.
 Magnetic fields were applied to the sample under varying angles $\phi_H$ with respect to the crystalline $a$-axis, and swept up and down while tracking the evolution of $P_b$.
 Only positive fields were applied, but as it turns out, the behavior is identical for fields with opposite signs. 
 In previous experimental measurements, the magnetic field was only applied along the crystalline $a$-axis, i.e. $\phi_H = 0$~\cite{Lee13}.
@@ -172,13 +172,13 @@ Turning now to the measurements displayed in Fig.~\ref{fig:GdMn2O5_experiment2},
 From the two panels in (c), displaying measurements with $\phi_H$ along the magic angle, but at two different temperatures (15 K and 4 K), we can observe that the four-state hysteresis loop only appears at low temperatures.
 For higher temperatures a more usual two-state loop is found, similar to the high angle loop in panel (c) of Fig.~\ref{fig:GdMn2O5_experiment1}.
 \\\\
-To conclude this section, we would like to point out that we focus on the overall switching behavior, i.e. we ignore the many interesting details that can be found by careful study of the $P_b$ graphs.
+To conclude this Section, we would like to point out that we focus on the overall switching behavior, i.e. we ignore the many interesting details that can be found by careful study of the $P_b$ graphs.
 For example, in Fig.~\ref{fig:GdMn2O5_experiment1}(b) one can find three distinct steps that appear around 5 T during the 1$\rightarrow$2 and 3$\rightarrow$4 switching.
 These steps are, however, absent at the same field magnitude, when the system is on the 2$\rightarrow$3 and 4$\rightarrow$1 branch.
 %to a transition, on an ionic level, to states with higher Gd spin, or it might be related
 Their origin might be related to the spins in the Mn chains rotating individually, rather than in unison as we will assume in our model.
 Further research is required to solidify this statement, here we rather choose to focus on unraveling the main behavior of the four-state loop flanked in $\phi_H$ parameter-space by two more usual two-state switching loops.
-% This novel four-state switching is the focus of this chapter, and is found to originate from a unidirectional rotational motion of the spins, a sort of microscopic magnetic analogue to the crankshaft in a car, converting the linear back--and--forth variation of the magnetic field into spin rotations.
+% This novel four-state switching is the focus of this Chapter, and is found to originate from a unidirectional rotational motion of the spins, a sort of microscopic magnetic analogue to the crankshaft in a car, converting the linear back--and--forth variation of the magnetic field into spin rotations.
 
 \section{Modeling}
 In order to describe the puzzling experimental observations we construct a semi-classical model with eight Gd spins denoting the eight sublattice magnetizations, and two AFM order parameters that describe the Mn chains.
@@ -323,7 +323,7 @@ The term with $K_S$ denotes the easy-axis anisotropy for the Gd ions, this time 
 $K_S$ is significantly smaller than $K_L$ due to the isotropic environment and valence configuration of the Gd ions.
 The final term denotes the Zeeman energy of the Gd ions in the external magnetic field $\bm{H}$.
 \\\\
-To conclude this section, we gather all the terms in our effective Hamiltonian:
+To conclude this Section, we gather all the terms in our effective Hamiltonian:
 \begin{multline}
     \label{eq:GdMn2O5_model}
     H=\gamma(\bm{L}_1\cdot \bm{L}_2)^2 +\sum_{\alpha}\chi((\bm{H}\cdot \bm{L}_\alpha)^2-H^2)\\
@@ -356,7 +356,7 @@ $v_1 = 7.9$~meV, $v_2 = 0.15$~meV, $K_L = 1.1$~meV, $K_S = 0.09$~meV, $\gamma = 
 The parameters for the exchange striction were then chosen to fit the experimental hysteresis loop as well as possible:
 ${\beta_1 = 0.06\,\mu}$C/cm$^2$, $\beta_2 = 0.06\:\mu$C/cm$^2$, $\beta_3 = 0.04\:\mu$C/cm$^2$.
 \\\\
-However, these parameters are by no means a requirement for the overarching behavior to exist. As we will show in greater detail in the following section, more specifically in the context of the discussion on the topological nature of the switching, a great deal of freedom exists in choosing these parameters, if the only requirement is to reproduce the three switching regimes.
+However, these parameters are by no means a requirement for the overarching behavior to exist. As we will show in greater detail in the following Section, more specifically in the context of the discussion on the topological nature of the switching, a great deal of freedom exists in choosing these parameters, if the only requirement is to reproduce the three switching regimes.
 This lies at the heart of our claim that this effect might exist in other materials, since neither the model itself nor its parameters depend greatly on the microscopic details of GdMn$_2$O$_5$. 
 \\\\
 The next question is how to simulate the experimental set-up, which is, in contrast to the question about the model parameters, much easier to answer.
@@ -390,7 +390,7 @@ At the start, it follows the high angle behavior moving 1$\rightarrow$2, then, m
 The trajectories through ($\phi_{L_1}$, $\phi_{L_2}$)-space, shown by the white lines in the bottom panels (d-f) of the same Figure, hint at the same conclusion.
 By connecting the trajectory of the low angle regime in (d) with the one at high angle in (f), and adding an inversion partner of both (i.e. one shifted by $\pi$ along $\phi_{L_1}$), we arrive at the trajectory of the magic angle regime in (e).
 The background energy surfaces are chosen to reflect how the barriers at an intermediate field value inside the hysteresis region differ depending on $\phi_H$.
-We will come back to these statements in the next section, as they are quite crucial.
+We will come back to these statements in the next Section, as they are quite crucial.
 \\\\
 In order to gain a deeper understanding of this peculiar behavior, we focus first on the energetics of the model as calculated by the simulations.
 The intricacies of the energetics are ultimately what results in the deterministic, unidirectional, switching of the system.
@@ -528,7 +528,7 @@ Since the ferroelectric polarization $P_b$ is a direct result of the magnetic co
 Most of the evolution of $P_b$ can be understood from the $\bm L_1 \cdot \bm L_2$ part. The contribution arising from the Gd--Mn exchange striction behaves similarly due to strong coupling between them ($v_1$), with an additional superposed contribution due to the slight rotations that the Gd spins perform away from the switching fields.
 At $\phi_{\rm H} = \pm 20^\circ$, both N\'eel vectors $\bm L_\alpha$ toggle between two directions in such a way that the angle between them and, hence, the electric polarization changes very little (Figs.~\ref{fig:GdMn2O5_regimes}(b,f),~\ref{fig:GdMn2O5_experiment1}(c), and~\ref{fig:GdMn2O5_theory}(c)). 
 On the other hand, at $\phi_{H}=0^\circ$, $\bm{L}_1$ and  $\bm{L}_2$ tilt in opposite directions. The resulting large variation of the angle between these two vectors gives rise to the two-state switching with the polarization reversal, as shown in Figs.~\ref{fig:GdMn2O5_regimes}(d),~\ref{fig:GdMn2O5_experiment1}(a), and ~\ref{fig:GdMn2O5_theory}(a). This suggests that the small-amplitude relative rotation of $\bm{L}_1$ and $\bm{L}_2$ is an electromagnon mode that could be excited by oscillating $H_a$ or $E_b$.
-On the boundary between the two extremes one of the $\bm L_alpha$ toggles while the other performs the full 360$^\circ$ rotation, leading to the four-state polarization loops.
+On the boundary between the two extremes one of the $\bm L_\alpha$ toggles while the other performs the full 360$^\circ$ rotation, leading to the four-state polarization loops.
 %
 %
 \subsection{Topology \label{sec:GdMn2O5_topology}}
@@ -550,7 +550,7 @@ where the integral is taken over the time interval, $t_0$, during which the magn
 In the two state switching regimes, $Q  = 0$, whereas for the four state switching, $Q = 1$.
 This means that as long as the low and high angle regimes are present in a material (Fig~\ref{fig:GdMn2O5_theory} (d,f)), there will always exist a boundary region near the magic angle (Fig~\ref{fig:GdMn2O5_theory}(e)), interpolating between the two, and leading to the circular four state hysteresis.
 \\\\
-We finish this section by demonstrating the generality of this behavior that results from its topological nature.
+We finish this Section by demonstrating the generality of this behavior that results from its topological nature.
 
 The size and position of the $\phi_H$ interval for which the four state regime appears, depends on the details of the used parameters, but similarly to other topological boundaries (e.g. magnetic domain walls, topologically protected edge states in topological insulators), it can not be destroyed when the neighboring ``domains'' are present (high and low angle switching regimes).
 The influence of varying a single model parameter is demonstrated in Fig.~\ref{fig:GdMn2O5_windingvsparam}, where the blue and red regions correspond to the angles $\phi_H$ where the low and high angle regimes appear, respectively.
@@ -566,7 +566,7 @@ This is not surprising, since the behavior of the Mn chains is very similar to t
 \\\\
 We have so far given a detailed description of the observed behavior, experimentally and from the simulations of our effective model.
 While the model reproduces the experiments remarkably well, and we have found that a combination of symmetries and energetics lies at the core of the peculiar switching behavior, one may wonder if this can be rationalized further.
-In attempt to do just this, we proceed in the following section with some intuitive considerations of the behavior.
+In attempt to do just this, we proceed in the following Section with some intuitive considerations of the behavior.
 
 \subsection{Intuition}
 First of all, we would like to point out the similarity of the behavior of $\bm L_1$ and $\bm L_2$ with the well-known spin-flop transition in antiferromagnets.
@@ -601,15 +601,16 @@ When the field subsequently decreases, the Gd rotates further in the same direct
 %     Coordinated changes of the state energies and barrier asymmetry with magnetic field enable the topological behavior.
 %     }
 % \end{figure}
-We hope that this intuitive picture shines some light on what might be happening microscopically to cause the behavior, although we concede the claim that this is a complete microscopic explanation.
+We hope that this intuitive picture shines some light on what might be happening microscopically to cause the behavior, although we concede the claim that this is a complete microscopic explanation. We will give an additional demonstration of this intuitive argument in the context of a simplified model, derived in the next Section.
 
 \section{Simplified Model}
 Having modeled the topologically protected switching in  GdMn$_2$O$_5$ with all its complexity, one may wonder what the minimal requirements are to have a similar behavior where the spins rotate 360$^\circ$ while the applied field only oscillates along a single axis.
-It is clear from the spin configurations in Fig.~\ref{fig:GdMn2O5_spin_configs} that the chain with Mn moments most parallel to the applied field does the full rotation, while the other chain merely toggles around its starting position. As mentioned before, the Gd spins mostly follow the behavior of the chain they are most strongly coupled to. This warrants an attempt to explain the observed behavior using only a single Mn chain with Gd spins, coupled to it via $v_1$. 
-In the particular case where the magic angle is along $\phi_H = +10^\circ$, we choose $L_1$, $S_2$, $S_3$, $
-S_6$ and $S_7$ as the remaining variables in the model. We also neglect the easy axis anisotropy of Gd spins.
+It is clear from the spin configurations in Fig.~\ref{fig:GdMn2O5_spin_configs}, and from previous considerations, that the chain with Mn moments most parallel to the applied field does the full rotation, while the other chain merely toggles around its starting orientation. As mentioned before, the Gd spins mostly follow the behavior of the chain they are most strongly coupled to. This warrants an attempt to reproduced the behavior of the rotating spins using only a single Mn chain with Gd spins, coupled to it via $v_1$. 
+In the particular case where the magic angle is along $\phi_H = +10^\circ$, we therefore keep $L_1$, $S_2$, $S_3$, $S_6$ and $S_7$ as the remaining variables in the model.
+Furthermore, we neglect the easy axis anisotropy of Gd spins because of its small contribution due to the isotropic environment of the Gd spins.
 This leaves us with the following Hamiltonian, combining two parts, one with the dipolar terms $H_{dip}$ and another with all the other terms, $H'$:
 \begin{align}
+	\label{eq:GdMn2O5_simple_model}
 	H &= H' + H_{dip} \\
 	H' &= v_1(\bm{S}_2 + \bm{S}_3 - (\bm{S}_6 + \bm{S}_7))\cdot\bm{L}_1 \nonumber\\
 	&- g \mu_B (\bm{S}_2 + \bm{S}_3 + \bm{S}_6 + \bm{S}_7) \cdot \bm{H} \nonumber\\
@@ -617,8 +618,8 @@ This leaves us with the following Hamiltonian, combining two parts, one with the
 	H_{dip} &= \frac{1}{2}(g \mu_B)^2\sum_{i\neq j}\left(\frac{\bm{S}_i\cdot \bm{S}_j}{r_{ij}^
 3}-3\frac{(\bm{S}_i\cdot \bm{r}_{ij})(\bm{S}_j\cdot \bm{r}_{ij})}{r_{ij}^5}\right)\nonumber.
 \end{align}
-Due to the symmetries of this simplified model and the geometry of the material we end up with two copies of one spin in the first half of the magnetic unit cell and one in the second half of the unit cell, with the chain in between (see Fig.~\ref{fig:GdMn2O5_simple_model}).
-This necessitates $S_2 = S_3$ and $S_6 = S_7$, and thus allows us to consider one of the two copies. Again, we keep only nearest-neighbor magneto-dipolar terms, and arrive to
+Due to the symmetries of this simplified model and the geometry of the material we find that $S_2 = S_3$ and $S_6 = S_7$, reducing the model to two copies of a single Gd spin in the first half of the magnetic unit cell ($S_3$), one in the second half of the unit cell ($S_6$), and the chain inbetween ($L_1$) (see the red box in Fig.~\ref{fig:GdMn2O5_simple_model}).
+This leads us to the equations:
 \begin{align}
 	H' &= 2v_1(\bm{S}_3 - \bm{S}_6)\cdot\bm{L}_1 - 2g \mu_B (\bm{S}_3 + \bm{S}_6) 
 \cdot \bm{H} \\
@@ -627,9 +628,14 @@ This necessitates $S_2 = S_3$ and $S_6 = S_7$, and thus allows us to consider on
 \end{align}
 as a minimal model that still demonstrates the crankshaft-like behavior.
 
+This minimal model embodies the intuitive explanation that we laid out in the previous Section, relying on the interaction between the two Gd spins and the magnetic field to push the AFM order into the positive direction at the switching field.
+When the chain flips, the exchange field from the Mn ions then pushes the Gd spins in the same positive direction, thus completing the first part of the cycle.
+During the second cycle the same consideration leads to the further positive rotation of the spins.
+
+
 \begin{figure}[b]
 	\IncludeGraphics[width=0.9\columnwidth]{simplified_model.png}
-	\caption{\label{fig:GdMn2O5_simple_model}{\bf Spins for the simplified model.} The purple and green spheres denote Mn and Gd ions, and the two red sphere show a single connecting Oxygen ion. Only the spins that are present in the simplified model are kept. The two clusters are related by symmetry and we show both for completeness.}
+	\caption{\label{fig:GdMn2O5_simple_model}{\bf Spins in the simplified model.} The zero field configuration of the spins that perform the full rotation (360$^\circ$), used in the simplified model \eqref{eq:GdMn2O5_simple_model}, and indicated by the arrows.  Due to the symmetry of the model and the geometry, the two clusters are copies of eachother, allowing the model to focus on the top right set, encased in the red box.}
 \end{figure}
 
 \section{Conclusions}
