--- a/papers/Rashba/Rashba.tex
+++ b/papers/Rashba/Rashba.tex
@@ -176,7 +176,7 @@ By carefully considering the microscopics we have found that both contributions 
 This leads us to the conclusion that the purely relativistic effect can not explain the observed spin-splitting which is around 0.3 eV in GeTe, especially since this splitting appears in the bulk band structure where no large interface contributions to the electric field play a role.
 
 In the remainder of this Chapter, we will thus focus on a different origin to the effect, one that lies in the combination of electrostatic effects with the strong atomic SOC.
-These electrostatics are a result of the creation of dipoles by Bloch functions with nonzero OAM, which we describe in the following section. 
+These electrostatics are a result of the creation of dipoles by Bloch functions with nonzero OAM, which we describe in the following Section. 
 % \lp{What about nagaosa?}
 \subsection{Orbital Rashba Effect}
 Until relatively recently, the exact role that the OAM plays in the Rashba-like linear spin-splitting was not well understood. Even now, there seems to be some confusion on how the many different mechanisms interact.   
@@ -336,7 +336,7 @@ Performing then another expansion in terms of small $\bm k$ we find:
 	=& \sum_{\bm{n},\alpha} \left(c_\alpha^{\bm 0} + \bm{k}\left.\frac{\partial c_\alpha^{\bm{k}}}{\partial \bm{k}}\right\rvert_{\bm{k}=0} \right)\left(1 + i\bm{k}\cdot\bm{n}\right)\Ket{\alpha^{\bm{n}}}\label{eq:Rashba_unqexp}.
 \end{align}
 Again we will omit $\bm{k}=\bm 0$ superscripts.
-Focusing on the terms that vary linearly with $k$, we can identify the $\bm k \frac{\partial c_\alpha^{\bm k}}{\partial \bm k}$ term as exactly the contribution that was discussed in the toy model derivation of the previous section.
+Focusing on the terms that vary linearly with $k$, we can identify the $\bm k \frac{\partial c_\alpha^{\bm k}}{\partial \bm k}$ term as exactly the contribution that was discussed in the toy model derivation of the previous Section.
 The new term originates from $ic_\alpha \bm k \cdot \bm n$ in Eq.~\eqref{eq:Rashba_unqexp}, leading to the linear contribution
 \begin{align}
 	\label{eq:d_z_from_OAM}
@@ -347,7 +347,7 @@ The new term originates from $ic_\alpha \bm k \cdot \bm n$ in Eq.~\eqref{eq:Rash
 where we used the definitions of $\hat{H}_{\rm isb}$ in Eq.~\eqref{eq:dipole}, and we remind the reader that $L_x$ and $L_y$ are the values of $\hat{L}_x$ and $\hat{L}_y$ of the Bloch function at $\bm k = \bm 0$.
 These expressions show us that, due to ${\hat{H}_{soc} = \lambda \hat{\bm{L}}\cdot\hat{\bm{\sigma}}}$ and $\hat{H}_{\rm isb} = e E_z \hat{d}_z$, an additional term with the Rashba form in Eq.~\eqref{eq:Rashba_form} appears in the energy dispersion due to the creation of orbitals with nonzero $L_y$ and $L_x$ at the high-symmetry point.
 \\\\
-Combining the linear--in--$\bm k$ terms found in the previous sections, we arrive at the following effective Rashba Hamiltonian:
+Combining the linear--in--$\bm k$ terms found in the previous Sections, we arrive at the following effective Rashba Hamiltonian:
 \begin{equation}
 	\label{eq:Rashba_hami}
 	H_R^{\bm k} = e \bm{E}_P\cdot \left[c_1(\bm{L}^{\bm 0} \times \bm k) + c_2 (\bm \sigma \times \bm k) \right],
