--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -215,11 +215,11 @@ We utilize both theoretical and computational tools to understand the nature of 
 % \Include{GdMn2O5}
 % \Include{Cr}
 
-\Include{Softening}
-% \appendix
-% \Include{DFT}
-% \Include{Wannier}
-% \Include{FEM}
+% \Include{Softening}
+\appendix
+\Include{DFT}
+\Include{Wannier}
+\Include{FEM}
 % \glossary
 % \Include{acronyms}
 \backmatter
